# sandboxf-go-repro

./: .gitignore  BUILD  README.md  WORKSPACE
app/: BUILD.bazel
